@startuml

title __GUI's Class Diagram__\n

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.DoctorSearch {
          - enter : JButton
          - input : JTextField
          - label : JLabel
          - results : ResultsPanel<Doctor>
          + DoctorSearch()
          - getDoctorResults()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.MyGUI {
          + MyGUI()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsEntry {
          - button : JButton
          - label : JLabel
          - text : String
          + ResultsEntry()
          + ResultsEntry()
          + ResultsEntry()
          + ResultsEntry()
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsPanel {
          - entries : ArrayList<ResultsEntry>
          + ResultsPanel()
      }
    }
  }
  

  Clinic.Client.GUI.DoctorSearch -up-|> javax.swing.JPanel
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Core.Token : token
  Clinic.Client.GUI.ResultsEntry -up-|> javax.swing.JPanel
  Clinic.Client.GUI.ResultsPanel -up-|> javax.swing.JPanel


@enduml
